--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>Console | RabbitLoader</title>
+    <title>Overview - RabbitLoader</title>
 
     <!-- Global stylesheets -->
     <link
@@ -14,36 +14,36 @@
       rel="stylesheet"
       type="text/css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&amp;display=swap"
       rel="stylesheet"
       type="text/css" />
     <link
-      href="./account/common/global_assets/css/icons/icomoon/styles.css"
+      href="/account/common/global_assets/css/icons/icomoon/styles.css?v=1708423744"
       rel="stylesheet"
       type="text/css" />
     <!-- <link href="/account/common/global_assets/css/icons/fontawesome/styles.min.css" rel="stylesheet" type="text/css"> -->
     <link
-      href="./account/common/css/bootstrap.min.css"
+      href="/account/common/css/bootstrap.min.css?v=1708423744"
       rel="stylesheet"
       type="text/css" />
     <link
-      href="./account/common/css/bootstrap_limitless.min.css"
+      href="/account/common/css/bootstrap_limitless.min.css?v=1708423744"
       rel="stylesheet"
       type="text/css" />
     <link
-      href="./account/common/css/layout.min.css"
+      href="/account/common/css/layout.min.css?v=1708423744"
       rel="stylesheet"
       type="text/css" />
     <link
-      href="./account/common/css/components.min.css"
+      href="/account/common/css/components.min.css?v=1708423744"
       rel="stylesheet"
       type="text/css" />
     <link
-      href="./account/common/css/colors.min.css"
+      href="/account/common/css/colors.min.css?v=1708423744"
       rel="stylesheet"
       type="text/css" />
     <link
-      href="./account/common/css/rabbitloader.css"
+      href="/account/common/css/rabbitloader.css?v=1708423744"
       rel="stylesheet"
       type="text/css" />
     <!-- /global stylesheets -->
@@ -81,9 +81,139 @@
       type="image/png"
       sizes="180x180"
       href="/assets/favicons/apple-touch-icon-180x180.png" />
+    <script async="" src="https://www.clarity.ms/s/0.7.20/clarity.js"></script>
+    <script
+      type="text/javascript"
+      async=""
+      src="https://www.googletagmanager.com/gtag/js?id=AW-11053972169&amp;l=dataLayer&amp;cx=c"></script>
+    <script async="" src="https://www.clarity.ms/tag/izknwacb3w"></script>
+    <script src="//snid.snitcher.com/8423168.js"></script>
+    <script
+      async=""
+      src="https://www.datadoghq-browser-agent.com/us1/v5/datadog-logs.js"></script>
+    <script
+      src="https://connect.facebook.net/signals/config/351015126940637?v=2.9.147&amp;r=stable&amp;domain=rabbitloader.com&amp;hme=20c913bdcd4be51a752120153aa5caaecb3ee86c7f26cf737846e40b202aba68&amp;ex_m=62%2C106%2C94%2C98%2C53%2C3%2C88%2C61%2C14%2C86%2C79%2C44%2C46%2C150%2C153%2C164%2C160%2C161%2C163%2C25%2C89%2C45%2C68%2C162%2C145%2C148%2C157%2C158%2C165%2C115%2C13%2C43%2C169%2C168%2C117%2C16%2C29%2C32%2C1%2C36%2C57%2C58%2C59%2C63%2C83%2C15%2C12%2C85%2C82%2C81%2C95%2C97%2C31%2C96%2C26%2C22%2C146%2C149%2C124%2C24%2C9%2C10%2C11%2C5%2C6%2C21%2C19%2C20%2C49%2C54%2C56%2C66%2C90%2C23%2C67%2C8%2C7%2C71%2C41%2C18%2C92%2C91%2C17%2C4%2C73%2C80%2C72%2C78%2C40%2C39%2C77%2C33%2C35%2C76%2C48%2C74%2C28%2C37%2C65%2C0%2C84%2C75%2C2%2C30%2C55%2C34%2C93%2C38%2C70%2C60%2C99%2C52%2C51%2C27%2C87%2C50%2C47%2C42%2C69%2C64%2C100"
+      async=""></script>
+    <script
+      async=""
+      src="https://connect.facebook.net/en_US/fbevents.js"></script>
+    <script
+      async=""
+      src="https://www.googletagmanager.com/gtm.js?id=GTM-N52KPZXH"></script>
     <script>
       const LUT = 1708423744;
     </script>
+    <script
+      type="text/javascript"
+      src="https://www.googletagmanager.com/gtag/js?id=G-WJ8NKL8M55"
+      async=""></script>
+    <script
+      type="text/javascript"
+      src="https://www.dwin1.com/43619.js"
+      async=""></script>
+    <script
+      type="text/javascript"
+      src="https://salesiq.zohopublic.in/widget"
+      id="zsiqscript"></script>
+    <script
+      type="text/javascript"
+      async=""
+      src="https://googleads.g.doubleclick.net/pagead/viewthroughconversion/1014118233/?random=1708490893987&amp;cv=11&amp;fst=1708490893987&amp;bg=ffffff&amp;guid=ON&amp;async=1&amp;gtm=45je42h0v872892017z89169984473za200&amp;gcd=13l3l3l3l1&amp;dma=0&amp;u_w=1366&amp;u_h=768&amp;url=https%3A%2F%2Frabbitloader.com%2Faccount%2F%3Futm_source%3Demail&amp;hn=www.googleadservices.com&amp;frm=0&amp;tiba=Console%20%7C%20RabbitLoader&amp;npa=0&amp;pscdl=label_only_4&amp;auid=424548140.1707723667&amp;uaa=x86&amp;uab=64&amp;uafvl=Not%2520A(Brand%3B99.0.0.0%7CGoogle%2520Chrome%3B121.0.6167.185%7CChromium%3B121.0.6167.185&amp;uamb=0&amp;uap=Windows&amp;uapv=10.0.0&amp;uaw=0&amp;fledge=1&amp;data=event%3Dgtag.config&amp;rfmt=3&amp;fmt=4"></script>
+    <style>
+      .introjs-button {
+        background: none;
+      }
+      .introjs-helperLayer {
+        box-shadow: rgb(8 17 251 / 80%) 0px 0px 1px 2px,
+          rgb(33 33 33 / 50%) 0px 0px 0px 5000px !important;
+      }
+    </style>
+    <script
+      type="text/javascript"
+      async=""
+      src="https://googleads.g.doubleclick.net/pagead/viewthroughconversion/11053972169/?random=1708490897076&amp;cv=11&amp;fst=1708490897076&amp;bg=ffffff&amp;guid=ON&amp;async=1&amp;gtm=45be42h0v9118563443z8872892017za200&amp;gcd=13l3l3l3l1&amp;dma=0&amp;u_w=1366&amp;u_h=768&amp;url=https%3A%2F%2Frabbitloader.com%2Faccount%2F%3Futm_source%3Demail&amp;hn=www.googleadservices.com&amp;frm=0&amp;tiba=Console%20%7C%20RabbitLoader&amp;npa=0&amp;pscdl=label_only_4&amp;auid=424548140.1707723667&amp;uaa=x86&amp;uab=64&amp;uafvl=Not%2520A(Brand%3B99.0.0.0%7CGoogle%2520Chrome%3B121.0.6167.185%7CChromium%3B121.0.6167.185&amp;uamb=0&amp;uap=Windows&amp;uapv=10.0.0&amp;uaw=0&amp;fledge=1&amp;data=event%3Dgtag.config&amp;rfmt=3&amp;fmt=4"></script>
+    <link
+      rel="stylesheet"
+      href="https://css.zohocdn.com/salesiq/styles/floatbutton1_91yhxHJAKn3JBwukUQ098f-1W7bBXYfzbYjqq3lClUJ2rTbyrjBiQd4nYFVD5hBu_.css"
+      integrity="sha384-91yhxHJAKn3JBwukUQ098f+1W7bBXYfzbYjqq3lClUJ2rTbyrjBiQd4nYFVD5hBu"
+      crossorigin="anonymous" />
+    <script
+      src="https://js.zohocdn.com/salesiq/js/floatbutton1_M9bZBcUWA0CK9sHkzfEFzsqRdNRxGnnP_Rd6mc4MIbcFkffPwOW1Jn8oVQoYhQRJ_.js"
+      integrity="sha384-M9bZBcUWA0CK9sHkzfEFzsqRdNRxGnnP/Rd6mc4MIbcFkffPwOW1Jn8oVQoYhQRJ"
+      crossorigin="anonymous"></script>
+    <link
+      rel="stylesheet"
+      href="https://css.zohocdn.com/salesiq/styles/floatbuttonpostload_q-qeZqs97St7hJ3Sr4lLk1LCuD4X4M9X2Fn9_4gzJfwABrSCp3up4ookt4We91M7_.css" />
+    <style id="rl-canonical-css">
+      .rl_score_tooltip {
+        position: relative;
+        display: inline-block;
+      }
+      .rl_score_tooltip .rl_score_tooltiptext {
+        visibility: hidden;
+        position: absolute;
+        width: 300px;
+        background-color: #555;
+        color: #fff;
+        padding: 5px 10px;
+        border-radius: 6px;
+        z-index: 1;
+        opacity: 0;
+        transition: opacity 0.6s;
+        font-size: 0.8125rem;
+      }
+      .rl_score_tooltip-right {
+        top: -5px;
+        left: 150%;
+      }
+      .rl_score_tooltip:hover .rl_score_tooltiptext {
+        visibility: visible;
+        opacity: 1;
+      }
+      .rl_score_tooltip-right::after {
+        content: " ";
+        position: absolute;
+        top: 50%;
+        right: 100%;
+        margin-top: -5px;
+        border-width: 5px;
+        border-style: solid;
+        border-color: transparent #555 transparent transparent;
+      }
+      .rl_score_tooltip-top {
+        bottom: 125%;
+        left: 50%;
+        margin-left: -150px;
+      }
+      .rl_score_tooltip-top::after {
+        content: "";
+        position: absolute;
+        top: 100%;
+        left: 50%;
+        margin-left: -5px;
+        border-width: 5px;
+        border-style: solid;
+        border-color: #555 transparent transparent transparent;
+      }
+      .rl_score_tooltip-bottom {
+        top: 135%;
+        left: 50%;
+        margin-left: -150px;
+      }
+      .rl_score_tooltip-bottom::after {
+        content: "";
+        position: absolute;
+        bottom: 100%;
+        left: 50%;
+        margin-left: -5px;
+        border-width: 5px;
+        border-style: solid;
+        border-color: transparent transparent #555 transparent;
+      }
+    </style>
+    <script
+      type="text/javascript"
+      src="https://cfw.rabbitloader.xyz/rl/mfe/rl.charts.v3.10.8.js"></script>
   </head>
 
   <body
@@ -1280,22 +1410,7 @@
     <script src="/account/common/global_assets/js/main/bootstrap.bundle.min.js?v=1708423744"></script>
     <script src="/account/common/global_assets/js/plugins/loaders/blockui.min.js?v=1708423744"></script>
     <script src="/account/common/global_assets/js/plugins/notifications/sweet_alert.min.js?v=1708423744"></script>
-    <iframe
-      allow="join-ad-interest-group"
-      data-tagging-id="AW-1014118233"
-      data-load-time="1708436612572"
-      height="0"
-      width="0"
-      style="display: none; visibility: hidden"
-      src="https://td.doubleclick.net/td/rul/1014118233?random=1708436612564&amp;cv=11&amp;fst=1708436612564&amp;fmt=3&amp;bg=ffffff&amp;guid=ON&amp;async=1&amp;gtm=45je42e0v872892017z89169984473za200&amp;gcd=13l3l3l3l1&amp;dma=0&amp;u_w=1360&amp;u_h=768&amp;url=https%3A%2F%2Frabbitloader.com%2Faccount%2F%3Futm_source%3Demail&amp;ref=https%3A%2F%2Frabbitloader.com%2Faccount%2F%3Futm_source%3Demail&amp;hn=www.googleadservices.com&amp;frm=0&amp;tiba=Console%20%7C%20RabbitLoader&amp;npa=0&amp;pscdl=label_only_5&amp;auid=347676116.1708435622&amp;uaa=x86&amp;uab=64&amp;uafvl=Not%2520A(Brand%3B99.0.0.0%7CGoogle%2520Chrome%3B121.0.6167.185%7CChromium%3B121.0.6167.185&amp;uamb=0&amp;uap=Windows&amp;uapv=10.0.0&amp;uaw=0&amp;fledge=1&amp;data=event%3Dgtag.config"></iframe
-    ><iframe
-      allow="join-ad-interest-group"
-      data-tagging-id="AW-11053972169"
-      data-load-time="1708436612665"
-      height="0"
-      width="0"
-      style="display: none; visibility: hidden"
-      src="https://td.doubleclick.net/td/rul/11053972169?random=1708436612657&amp;cv=11&amp;fst=1708436612657&amp;fmt=3&amp;bg=ffffff&amp;guid=ON&amp;async=1&amp;gtm=45be42e0v9118563443z8872892017za200&amp;gcd=13l3l3l3l1&amp;dma=0&amp;u_w=1360&amp;u_h=768&amp;url=https%3A%2F%2Frabbitloader.com%2Faccount%2F%3Futm_source%3Demail&amp;ref=https%3A%2F%2Frabbitloader.com%2Faccount%2F%3Futm_source%3Demail&amp;hn=www.googleadservices.com&amp;frm=0&amp;tiba=Console%20%7C%20RabbitLoader&amp;npa=0&amp;pscdl=label_only_5&amp;auid=347676116.1708435622&amp;uaa=x86&amp;uab=64&amp;uafvl=Not%2520A(Brand%3B99.0.0.0%7CGoogle%2520Chrome%3B121.0.6167.185%7CChromium%3B121.0.6167.185&amp;uamb=0&amp;uap=Windows&amp;uapv=10.0.0&amp;uaw=0&amp;fledge=1&amp;data=event%3Dgtag.config"></iframe>
+
     <script src="/account/common/global_assets/js/plugins/tables/datatables/datatables.min.js"></script>
     <script src="/account/common/global_assets/js/plugins/forms/styling/uniform.min.js"></script>
     <script src="/account/common/global_assets/js/plugins/forms/selects/select2.min.js"></script>
@@ -1310,7 +1425,7 @@
     <script src="/account/common/js/report_img.js?v=1708423744"></script> -->
     <script src="/account/common/js/report_css.js"></script>
     <script src="/account/common/js/app.js"></script>
-    <script src="/account/common/js/custom.js"></script>
+    <!-- <script src="/account/common/js/custom.js"></script> -->
     <link
       href="https://unpkg.com/intro.js/minified/introjs.min.css"
       rel="stylesheet" />
@@ -1349,7 +1464,22 @@
       firebase.initializeApp(firebaseConfig);
       const fb_analytics = firebase.analytics();
     </script>
-
+    <iframe
+      allow="join-ad-interest-group"
+      data-tagging-id="AW-1014118233"
+      data-load-time="1708436612572"
+      height="0"
+      width="0"
+      style="display: none; visibility: hidden"
+      src="https://td.doubleclick.net/td/rul/1014118233?random=1708436612564&amp;cv=11&amp;fst=1708436612564&amp;fmt=3&amp;bg=ffffff&amp;guid=ON&amp;async=1&amp;gtm=45je42e0v872892017z89169984473za200&amp;gcd=13l3l3l3l1&amp;dma=0&amp;u_w=1360&amp;u_h=768&amp;url=https%3A%2F%2Frabbitloader.com%2Faccount%2F%3Futm_source%3Demail&amp;ref=https%3A%2F%2Frabbitloader.com%2Faccount%2F%3Futm_source%3Demail&amp;hn=www.googleadservices.com&amp;frm=0&amp;tiba=Console%20%7C%20RabbitLoader&amp;npa=0&amp;pscdl=label_only_5&amp;auid=347676116.1708435622&amp;uaa=x86&amp;uab=64&amp;uafvl=Not%2520A(Brand%3B99.0.0.0%7CGoogle%2520Chrome%3B121.0.6167.185%7CChromium%3B121.0.6167.185&amp;uamb=0&amp;uap=Windows&amp;uapv=10.0.0&amp;uaw=0&amp;fledge=1&amp;data=event%3Dgtag.config"></iframe
+    ><iframe
+      allow="join-ad-interest-group"
+      data-tagging-id="AW-11053972169"
+      data-load-time="1708436612665"
+      height="0"
+      width="0"
+      style="display: none; visibility: hidden"
+      src="https://td.doubleclick.net/td/rul/11053972169?random=1708436612657&amp;cv=11&amp;fst=1708436612657&amp;fmt=3&amp;bg=ffffff&amp;guid=ON&amp;async=1&amp;gtm=45be42e0v9118563443z8872892017za200&amp;gcd=13l3l3l3l1&amp;dma=0&amp;u_w=1360&amp;u_h=768&amp;url=https%3A%2F%2Frabbitloader.com%2Faccount%2F%3Futm_source%3Demail&amp;ref=https%3A%2F%2Frabbitloader.com%2Faccount%2F%3Futm_source%3Demail&amp;hn=www.googleadservices.com&amp;frm=0&amp;tiba=Console%20%7C%20RabbitLoader&amp;npa=0&amp;pscdl=label_only_5&amp;auid=347676116.1708435622&amp;uaa=x86&amp;uab=64&amp;uafvl=Not%2520A(Brand%3B99.0.0.0%7CGoogle%2520Chrome%3B121.0.6167.185%7CChromium%3B121.0.6167.185&amp;uamb=0&amp;uap=Windows&amp;uapv=10.0.0&amp;uaw=0&amp;fledge=1&amp;data=event%3Dgtag.config"></iframe>
     <script
       src="https://unpkg.com/intro.js@6.0.0/minified/intro.min.js"
       type="text/javascript"
