featured box & custom media query add

--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
             <!--====== Welcome back Start =======-->
             <div class="col-md-6 col-lg-8 col-xl-8">
               <div class="welcome_back_card">
-                <div class="d-flex flex-column">
+                <div class="d-flex flex-column welcome_back_content">
                   <div class="left_side_content">
                     <h4>Welcome back 👋 <span>Jaydon Frankie</span></h4>
                     <p>
@@ -594,7 +594,26 @@
             <!--====== Welcome back end =======-->
 
             <!--====== Featured App Start =======-->
-            <div class="col-md-6 col-lg-4 col-xl-4"></div>
+            <div class="col-md-6 col-lg-4 col-xl-4">
+              <div class="featured_box_card">
+                <div class="featured_inner_content">
+                  <h6>FEATURED APP</h6>
+                  <h5
+                    data-toggle="tooltip"
+                    data-placement="bottom"
+                    title="Exploring the Hidden Gems of Destination">
+                    Exploring the Hidden Gems...
+                  </h5>
+                  <p
+                    data-toggle="tooltip"
+                    data-placement="bottom"
+                    title="The old oak tree stood tall and majestic, its branches
+                    swaying gently in the breeze.">
+                    The old oak tree stood tall and majestic...
+                  </p>
+                </div>
+              </div>
+            </div>
             <!--====== Featured App End=======-->
           </div>
 
