--- a/index.html
+++ b/index.html
@@ -619,15 +619,28 @@
 
           <div class="row">
             <!--====== Speed Score Start =======-->
-            <!--====== Speed Score End =======-->
-            <div class="col-md-6 col-xl-4">
-              <!-- Invitation stats white -->
+            <div class="col-md-6 col-xl-4 col-lg-4">
               <div class="card text-center card-speed-score">
                 <div class="card-body">
                   <h3 class="">Speed Score</h3>
                   <p class="mb-4">Best score based on PageSpeed Insights</p>
-                  <!-- <div class="svg-center position-relative mb-1" id="progress_percentage_score"></div> -->
-                  <div class="svg-center" id="progress_percentage_score">
+
+                  <!-- <div class="svg-center" id="progress_percentage_score"></div> -->
+                  <div class="svg-center" id="progress_percentage_score"></div>
+                </div>
+              </div>
+            </div>
+
+            <!--====== Speed Score End =======-->
+
+            <!-- <div class="col-md-6 col-xl-4"> -->
+            <!-- Invitation stats white -->
+            <!-- <div class="card text-center card-speed-score">
+                <div class="card-body">
+                  <h3 class="">Speed Score</h3>
+                  <p class="mb-4">Best score based on PageSpeed Insights</p> -->
+            <!-- <div class="svg-center position-relative mb-1" id="progress_percentage_score"></div> -->
+            <!-- <div class="svg-center" id="progress_percentage_score">
                     <svg width="150" height="150">
                       <g transform="translate(75,75)">
                         <g>
@@ -666,10 +679,10 @@
                       </g>
                     </svg>
                   </div>
-                </div>
-                <!-- </div>
+                </div> -->
+            <!-- </div>
         <div class="card text-center"> -->
-                <div class="card-body border-top-0 pt-3 speed-score-data">
+            <!-- <div class="card-body border-top-0 pt-3 speed-score-data">
                   <div class="row">
                     <div class="col-6">
                       <div class="text-uppercase text-muted">Pages</div>
@@ -683,29 +696,28 @@
                       <h4 class="font-weight-semibold line-height-1 mt-1 mb-0">
                         79
                       </h4>
-                    </div>
+                    </div> -->
 
-                    <!-- <div class="col-4">
+            <!-- <div class="col-4">
                         <div class="text-uppercase text-muted">Min Score</div>
                         <h4 class="font-weight-semibold line-height-1 mt-1 mb-0">0</h4>
                     </div> -->
-                  </div>
+            <!-- </div>
                 </div>
-              </div>
-              <!-- /invitation stats white -->
-            </div>
+              </div> -->
+            <!-- /invitation stats white -->
+            <!-- </div> -->
 
             <!--====== Website Visit Start =======-->
-            <!--====== Website Visit End =======-->
-            <div class="col-md-6 col-xl-8">
+            <div class="col-md-6 col-xl-8 col-lg-8">
               <div
                 id="d3-area-stacked-nest-pageview"
                 style="height: 370px"
                 class="card rl-charts-mfe">
                 <div class="card-body">
-                  <h2 class="card-title">24K</h2>
-                  <h6 class="card-subtitle mb-2 text-body-secondary">
-                    Total PageViews: 23 Jan - 20 Feb
+                  <h2 class="card-title">Website Visits</h2>
+                  <h6 class="card-subtitle text-body-secondary">
+                    (+43%) than last year
                   </h6>
                 </div>
                 <div
@@ -783,6 +795,93 @@
                 </div>
               </div>
             </div>
+            <!--====== Website Visit End =======-->
+            <!-- <div class="col-md-6 col-xl-8 ">
+              <div
+                id="d3-area-stacked-nest-pageview"
+                style="height: 370px"
+                class="card rl-charts-mfe">
+                <div class="card-body">
+                  <h2 class="card-title">Website Visits</h2>
+                  <h6 class="card-subtitle mb-2 text-body-secondary">
+                    (+43%) than last year
+                  </h6>
+                </div>
+                <div
+                  style="
+                    height: 368px;
+                    user-select: none;
+                    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+                    position: relative;
+                  "
+                  _echarts_instance_="ec_1708436746393">
+                  <div
+                    style="
+                      position: relative;
+                      width: 363px;
+                      height: 261px;
+                      padding: 0px;
+                      margin: 0px;
+                      border-width: 0px;
+                      cursor: default;
+                    ">
+                    <canvas
+                      data-zr-dom-id="zr_0"
+                      width="399"
+                      height="287"
+                      style="
+                        position: absolute;
+                        left: 0px;
+                        top: 0px;
+                        width: 363px;
+                        height: 261px;
+                        user-select: none;
+                        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+                        padding: 0px;
+                        margin: 0px;
+                        border-width: 0px;
+                      "></canvas>
+                  </div>
+                  <div
+                    class=""
+                    style="
+                      position: absolute;
+                      display: block;
+                      border-style: solid;
+                      white-space: nowrap;
+                      z-index: 9999999;
+                      box-shadow: rgba(0, 0, 0, 0.2) 1px 2px 10px;
+                      transition: opacity 0.2s cubic-bezier(0.23, 1, 0.32, 1) 0s,
+                        visibility 0.2s cubic-bezier(0.23, 1, 0.32, 1) 0s,
+                        transform 0.4s cubic-bezier(0.23, 1, 0.32, 1) 0s;
+                      background-color: rgb(255, 255, 255);
+                      border-width: 1px;
+                      border-radius: 4px;
+                      color: rgb(102, 102, 102);
+                      font: 13px / 20px Roboto, sans-serif;
+                      padding: 10px 15px;
+                      top: 0px;
+                      left: 0px;
+                      transform: translate3d(598px, 23px, 0px);
+                      border-color: rgb(255, 255, 255);
+                      pointer-events: none;
+                      visibility: hidden;
+                      opacity: 0;
+                    ">
+                    Feb 13, 2024<br /><br /><span
+                      style="
+                        display: inline-block;
+                        margin-right: 4px;
+                        border-radius: 10px;
+                        width: 10px;
+                        height: 10px;
+                        background-color: #5470c6;
+                      "></span>
+                    966
+                  </div>
+                </div>
+              </div>
+            </div> -->
           </div>
 
           <div class="row" id="common_stats">
@@ -1473,6 +1572,10 @@
       </div>
     </div>
     <!-- /footer -->
+
+    <!-- New Js Files -->
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <script src="./newScript.js"></script>
 
     <!-- Core JS files -->
     <script src="/assets/js/rl-cookie.js?v=1708423744"></script>
