--- a/index.html
+++ b/index.html
@@ -630,9 +630,9 @@
                 </div>
               </div>
             </div>
-
             <!--====== Speed Score End =======-->
 
+            <!--====== Old Code =======-->
             <!-- <div class="col-md-6 col-xl-4"> -->
             <!-- Invitation stats white -->
             <!-- <div class="card text-center card-speed-score">
@@ -707,6 +707,7 @@
               </div> -->
             <!-- /invitation stats white -->
             <!-- </div> -->
+            <!--====== Old Code =======-->
 
             <!--====== Website Visit Start =======-->
             <div class="col-md-6 col-xl-8 col-lg-8">
@@ -720,82 +721,12 @@
                     (+43%) than last year
                   </h6>
                 </div>
-                <div
-                  style="
-                    height: 368px;
-                    user-select: none;
-                    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-                    position: relative;
-                  "
-                  _echarts_instance_="ec_1708436746393">
-                  <div
-                    style="
-                      position: relative;
-                      width: 363px;
-                      height: 261px;
-                      padding: 0px;
-                      margin: 0px;
-                      border-width: 0px;
-                      cursor: default;
-                    ">
-                    <canvas
-                      data-zr-dom-id="zr_0"
-                      width="399"
-                      height="287"
-                      style="
-                        position: absolute;
-                        left: 0px;
-                        top: 0px;
-                        width: 363px;
-                        height: 261px;
-                        user-select: none;
-                        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-                        padding: 0px;
-                        margin: 0px;
-                        border-width: 0px;
-                      "></canvas>
-                  </div>
-                  <div
-                    class=""
-                    style="
-                      position: absolute;
-                      display: block;
-                      border-style: solid;
-                      white-space: nowrap;
-                      z-index: 9999999;
-                      box-shadow: rgba(0, 0, 0, 0.2) 1px 2px 10px;
-                      transition: opacity 0.2s cubic-bezier(0.23, 1, 0.32, 1) 0s,
-                        visibility 0.2s cubic-bezier(0.23, 1, 0.32, 1) 0s,
-                        transform 0.4s cubic-bezier(0.23, 1, 0.32, 1) 0s;
-                      background-color: rgb(255, 255, 255);
-                      border-width: 1px;
-                      border-radius: 4px;
-                      color: rgb(102, 102, 102);
-                      font: 13px / 20px Roboto, sans-serif;
-                      padding: 10px 15px;
-                      top: 0px;
-                      left: 0px;
-                      transform: translate3d(598px, 23px, 0px);
-                      border-color: rgb(255, 255, 255);
-                      pointer-events: none;
-                      visibility: hidden;
-                      opacity: 0;
-                    ">
-                    Feb 13, 2024<br /><br /><span
-                      style="
-                        display: inline-block;
-                        margin-right: 4px;
-                        border-radius: 10px;
-                        width: 10px;
-                        height: 10px;
-                        background-color: #5470c6;
-                      "></span>
-                    966
-                  </div>
-                </div>
+                <div id="chart"></div>
               </div>
             </div>
             <!--====== Website Visit End =======-->
+
+            <!--====== Old Code =======-->
             <!-- <div class="col-md-6 col-xl-8 ">
               <div
                 id="d3-area-stacked-nest-pageview"
@@ -882,6 +813,7 @@
                 </div>
               </div>
             </div> -->
+            <!--====== Old Code =======-->
           </div>
 
           <div class="row" id="common_stats">
