weekly sales & invite friends add:

--- a/index.html
+++ b/index.html
@@ -894,6 +894,41 @@
           </div>
 
           <div class="row">
+            <!-- Weekly sales start -->
+            <div class="col">
+              <div class="card weekly_sale_card">
+                <img
+                  src="/assets/icons/glass/ic_glass_bag.png"
+                  alt="weekly-sales" />
+
+                <h2>77k</h2>
+                <p>Weekly Sales</p>
+              </div>
+            </div>
+            <!-- Weekly sales end -->
+
+            <!-- invite firends start -->
+            <div class="col">
+              <div class="card invite_friends_card">
+                <div class="invite_friends_card_heading">
+                  <div class="invite_friends_heading_left">
+                    <h5>Invite friends and earn</h5>
+                  </div>
+                  <div class="invite_friends_heading_right">
+                    <h2>$50</h2>
+                  </div>
+                </div>
+
+                <form>
+                  <input type="email" name="email" id="" placeholder="Email" />
+                  <button class="invite_btn">Invite</button>
+                </form>
+              </div>
+            </div>
+            <!-- invite firends end -->
+          </div>
+
+          <div class="row">
             <div class="col-sm-12">
               <div class="card">
                 <div class="card-header header-elements-inline">
