upgrade plan add

--- a/index.html
+++ b/index.html
@@ -918,7 +918,7 @@
                     <h2>$50</h2>
                   </div>
                 </div>
-
+                <!-- invite friends form -->
                 <form>
                   <input type="email" name="email" id="" placeholder="Email" />
                   <button class="invite_btn">Invite</button>
@@ -926,6 +926,33 @@
               </div>
             </div>
             <!-- invite firends end -->
+
+            <!-- upgrade plan start -->
+            <div class="col">
+              <div class="card upgrade_plan_card">
+                <div class="upgrade_plan_content">
+                  <div class="upgrade_plan_image_content">
+                    <img
+                      src="/assets/icons/glass/upgrade.svg"
+                      alt=""
+                      class="upgrade_img" />
+                    <img
+                      src="/assets/icons/glass/character_2.png"
+                      alt="character"
+                      class="character_img" />
+                  </div>
+
+                  <div class="upgrade_plan_btn">
+                    <button>Upgrade Plan</button>
+                  </div>
+
+                  <div class="upgrade_plan_text">
+                    <p>Upgrade your plan and get more space</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- upgrade plan end-->
           </div>
 
           <div class="row">
