--- a/index.html
+++ b/index.html
@@ -714,14 +714,14 @@
               <div
                 id="d3-area-stacked-nest-pageview"
                 style="height: 370px"
-                class="card rl-charts-mfe">
+                class="card rl-charts-mfe website_visit_card">
                 <div class="card-body">
                   <h2 class="card-title">Website Visits</h2>
                   <h6 class="card-subtitle text-body-secondary">
                     (+43%) than last year
                   </h6>
                 </div>
-                <div id="chart"></div>
+                <div id="website_visit"></div>
               </div>
             </div>
             <!--====== Website Visit End =======-->
@@ -817,6 +817,26 @@
           </div>
 
           <div class="row" id="common_stats">
+            <!--====== Pages Optimized Start =======-->
+            <!-- <div class="col">
+              <a href="#analytics_css">
+                <div
+                  class="card card-body page_optimized_card"
+                  id="card-body-css_size_pp">
+                  <div>
+                    <h6>Pages Optimized</h6>
+                  </div>
+                  <div class="media-body">
+                    <h4 class="font-weight-bold mb-0" id="css_size_pp">98%</h4>
+
+                    <div id="page_optimized"></div>
+                  </div>
+                </div>
+              </a>
+            </div> -->
+            <!--====== Pages Optimized end =======-->
+
+            <!--====== Old Code =======-->
             <div class="col">
               <a href="#analytics_css">
                 <div class="card card-body" id="card-body-css_size_pp">
@@ -836,6 +856,9 @@
                 </div>
               </a>
             </div>
+            <!--====== Old Code =======-->
+
+            <!--====== Old Code =======-->
             <div class="col">
               <a href="#rules">
                 <div class="card card-body" id="card-body-page_rule">
@@ -855,6 +878,9 @@
                 </div>
               </a>
             </div>
+            <!--====== Old Code =======-->
+
+            <!--====== Old Code =======-->
             <div class="col">
               <a href="#share">
                 <div class="card card-body" id="card-body-share">
@@ -872,6 +898,9 @@
                 </div>
               </a>
             </div>
+            <!--====== Old Code =======-->
+
+            <!--====== Old Code =======-->
             <div class="col">
               <a href="#billing">
                 <div class="card card-body" id="card-body-plan_title">
@@ -891,6 +920,7 @@
                 </div>
               </a>
             </div>
+            <!--====== Old Code =======-->
           </div>
 
           <div class="row">
